--- a/.github/workflows/issue-manager.yml
+++ b/.github/workflows/issue-manager.yml
@@ -15,7 +15,7 @@ jobs:
   issue-manager:
     runs-on: ubuntu-latest
     steps:
-      - uses: khulnasoft/issue-manager-action@master
+      - uses: khulnasoft/issue-manager-action@0.5.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           config: >
